src/App.css
@import "tailwindcss";

/* Theme behavior */
html {
  color-scheme: light;
}
html.dark {
  color-scheme: dark;
}

/* Smooth transition for theme switching */
* {
  transition: background-color 0.25s ease, color 0.25s ease,
    border-color 0.25s ease;
}

/* hide scrollbar */
.scrollbar-none::-webkit-scrollbar {
  display: none;
}
.scrollbar-none {
  scrollbar-width: none;
}

/* Tailwind custom variables */
@theme {
  --font-brandFont: "Plus Jakarta Sans", sans-serif;
  --font-logoFont: "Vend Sans", sans-serif;

  --color-brand1: #4f46e5;
  --color-brand2: #f59e0b;
  --color-brand3: #22c55e;
  --color-brand4: #f8fafc;
}

